using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationName
{
    public const string IDLE = "idle";
    public const string MOVE = "move";
    public const string DASH = "dash";
    public const string DASH_END = "EndDash";
    public const string HIT = "hit";
    public const string HIT2 = "Hit2";
    public const string DIE = "Die";
    public const string ATTACK = "attack";
    public const string JUMP = "Jump";
    public const string FALL = "Fall";
    public const string END_FALL = "EndFall";
    public const string END_FALL_MOVE = "EndFallMove";
    public const string DOUBLE_JUMP = "DoubleJump";
    public const string END_JUMP_ATTACK = "EndJumpAttack";
    public const string LOCK_AIR_COMBO = "LockAirCombo";
    public const string IS_ON_ATTACK = "IsOnAttack";
    public const string KNOCK_DOWN = "KnockDown";
    public const string KNOCK_DOWN_2 = "KnockDown2";
    public const string GET_UP = "GetUp";
    public const string LOCK_HIT_ANIM = "LockHitAnim";
    public const string IS_GROUND = "IsGround";
    public const string IS_ON_AIR_ATTACK = "IsOnAirAttack";
    public const string IS_ON_KNOCK_DOWN = "OnKnockDown";
    public const string DIE_END = "DieEnd";
    public const string SKILL_END = "EndSkill";
    public const string ATK_SPEED = "AtkSpeed";
    public const string REVIVE = "Revive";
    public const string BLOCK = "Block";
    public const string EXPLOSION = "Explosion";
    public const string STUNT = "Stunt";
    public const string IS_ON_STUNT = "OnStunt";
    public const string ROLL_TO_MOVE = "RollToMove";
    public const string ROLL_TO_IDLE = "RollToIdle";
    
}
public class AnimationTriger
{
    public const string IDLE = "idle";
    public const string MOVE = "move";
    public const string DASH = "dash";
    public const string DASHATTACK = "dashattack";
    public const string HIT = "hit";
    public const string HIT2 = "hit2";
    public const string DIE = "die";
    public const string ATTACK = "attack";
    public const string JUMP = "jump";
    public const string JUMPFAIL = "jumpfail";
    public const string SPAWN = "spawn";
    public const string AIRATTACKFAIL = "airattackfail";
    //public const string FALL = "Fall";
    //public const string END_FALL = "EndFall";
    //public const string END_FALL_MOVE = "EndFallMove";
    //public const string DOUBLE_JUMP = "DoubleJump";
    //public const string END_JUMP_ATTACK = "EndJumpAttack";
    //public const string LOCK_AIR_COMBO = "LockAirCombo";
    //public const string IS_ON_ATTACK = "IsOnAttack";
    //public const string KNOCK_DOWN = "KnockDown";
    //public const string KNOCK_DOWN_2 = "KnockDown2";
    //public const string GET_UP = "GetUp";
    //public const string LOCK_HIT_ANIM = "LockHitAnim";
    //public const string IS_GROUND = "IsGround";
    //public const string IS_ON_AIR_ATTACK = "IsOnAirAttack";
    //public const string IS_ON_KNOCK_DOWN = "OnKnockDown";
    //public const string DIE_END = "DieEnd";
    //public const string SKILL_END = "EndSkill";
    //public const string ATK_SPEED = "AtkSpeed";
    public const string REVIVE = "revive";
    //public const string BLOCK = "Block";
    //public const string EXPLOSION = "Explosion";
    //public const string STUNT = "Stunt";
    //public const string IS_ON_STUNT = "OnStunt";
    //public const string ROLL_TO_MOVE = "RollToMove";
    //public const string ROLL_TO_IDLE = "RollToIdle";

}
